--- a/Source/Managed/ENet-CSharp.csproj
+++ b/Source/Managed/ENet-CSharp.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>netstandard2.1;netcoreapp3.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;netcoreapp3.1;net5.0;net452</TargetFrameworks>
     <Platforms>x64</Platforms>
     <RootNamespace>ENet</RootNamespace>
     <LangVersion>3</LangVersion>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
