--- a/Source/Managed/ENet-CSharp.csproj
+++ b/Source/Managed/ENet-CSharp.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>netstandard2.1;netcoreapp3.1;net5.0;net452</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;netcoreapp3.1;net5.0;net452;net45</TargetFrameworks>
     <Platforms>x64</Platforms>
     <RootNamespace>ENet</RootNamespace>
     <LangVersion>3</LangVersion>
